@@ -150,8 +150,10 @@ class abook_local_file extends addressbook_backend {
         }       
 
         fclose($newfh);
-        copy( $this->filename .'.tmp' , $this->filename);
-        unlink( $this->filename .'.tmp');
+        if (!@copy($this->filename . '.tmp' , $this->filename)) {
+            return $this->set_error($file->filename.':' . _("Unable to update"));
+        }
+        @unlink( $this->filename .'.tmp');
         $this->unlock();
         $this->open(true);
         return true;
